--- a/maietta.tex
+++ b/maietta.tex
@@ -85,17 +85,14 @@
 \usepackage[export]{adjustbox}
 \usepackage{wrapfig}
 %------------------------------
-
 %Table-related commands
 \usepackage{array}
-%\usepackage[table]{xcolor}
+\usepackage[table]{xcolor}
 \setlength{\arrayrulewidth}{1mm}
 \setlength{\tabcolsep}{18pt}
 \renewcommand{\arraystretch}{1.5}
 \newcolumntype{s}{>{\columncolor[HTML]{AAACED}} p{3cm}}
-
-
-
+%-------------------------------------------------------
 
 
 
